Fixed artist index wrapping.

--- a/public/css/artists/index.css
+++ b/public/css/artists/index.css
@@ -1,6 +1,7 @@
 #artists-box {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .artist-box {
