--- a/public/css/master.css
+++ b/public/css/master.css
@@ -20,6 +20,11 @@ header {
   margin-left: 10px;
 }
 
+header #header-logo {
+  text-decoration: none;
+  color: white;
+}
+
 header ul {
 
 }
